--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -620,30 +620,14 @@
 
     function send_update(estudante, proposta) {
       $.ajax({
-        url: '{% url "pre_alocar_estudante" %}',
+        url: "{% url 'pre_alocar_estudante' %}",
         data: {
           "estudante": estudante,
           "proposta": proposta,
         },
-        dataType: "json",
-        success: function (data) {
-          {% comment %}
-            if (data.atualizado) {
-              //console.log("Valor atualizado.");
-            } else {
-              console.log("Valor não atualizado.");
-            }
-          {% endcomment %}
-        },
-        error: function (request, status, error) {
-          {% if user.tipo_de_usuario == 4 %} 
-            alert(request.responseText);
-            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-            console.log("error"+request.responseText);
-          {% else %}
-            jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-          {% endif %}
-        }
+        dataType: "JSON",
+        success: function(data) {},
+        {% include "ajax_error_function.js" %}
       });
     }
 
