--- a/administracao/templates/administracao/relatorio_projetos.html
+++ b/administracao/templates/administracao/relatorio_projetos.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     
-    <span class="titulo">Projetos Disponíveis - PFE {{configuracao.ano}}.{{configuracao.semestre}}</span>
+    <span class="titulo">Projetos Disponíveis {{configuracao.ano}}.{{configuracao.semestre}}</span>
 
     {% if projetos %}
 
