--- a/professores/templates/professores/dinamicas_view.html
+++ b/professores/templates/professores/dinamicas_view.html
@@ -251,20 +251,11 @@
       processData: false,
       contentType: false,
       success: function(response){
-        //console.log("sucesso");
         $("#submit").hide();
         $("#excluir").hide();
         $("#modal-body").html(response.mensagem);
       },
-      error: function (request, status, error) {
-        {% if user.tipo_de_usuario == 4 %} 
-          alert(request.responseText);
-          jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-          console.log('error'+request.responseText);
-        {% else %}
-          jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-        {% endif %}
-      }
+      {% include "ajax_error_function.js" %}
     });
 
     return false;
