--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -285,15 +285,7 @@
               $(".to_label").removeClass("label_animado");
             }
           },
-          error: function (request, status, error) {
-            {% if user.tipo_de_usuario == 4 %} 
-              alert(request.responseText);
-              jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-              console.log('error'+request.responseText);
-            {% else %}
-              jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-            {% endif %}
-          }
+          {% include "ajax_error_function.js" %}
       });
     }
 
