--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -143,25 +143,15 @@
         function atualiza(event) {
           $.ajax({
             type: "POST",
-            url: '{% url "ajax_atualiza_banca" %}',
+            url: "{% url 'ajax_atualiza_banca' %}",
             data: {
                 "id": event.id,
                 "start": event.start.toLocaleString("pt-BR", { year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit", hour12: false  }),
                 "end": event.end.toLocaleString("pt-BR", { year: "numeric", month: "2-digit", day: "2-digit", hour: "2-digit", minute: "2-digit", hour12: false  }),
                 "csrfmiddlewaretoken": "{{ csrf_token }}",
             },
-            success: function(response){
-              //console.log(response);
-            },
-            error: function (request, status, error) {
-              {% if user.tipo_de_usuario == 4 %} 
-                alert(request.responseText);
-                jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-                console.log('error'+request.responseText);
-              {% else %}
-                jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-              {% endif %}
-            }
+            success: function(response){},
+            {% include "ajax_error_function.js" %}
           });
         }
 
