--- a/professores/templates/professores/bancas_view.html
+++ b/professores/templates/professores/bancas_view.html
@@ -516,15 +516,7 @@
         $("#modal-body").html(response.mensagem);
         loadContent( "#atualizar", "{% url 'bancas_index' %}", "#atualizar" );
       },
-      error: function (request, status, error) {
-        {% if user.tipo_de_usuario == 4 %} 
-          alert(request.responseText);
-          jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-          console.log("error"+request.responseText);
-        {% else %}
-          jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-        {% endif %}
-      }
+      {% include "ajax_error_function.js" %}
     });
 
     return false;
