--- a/propostas/templates/propostas/publicar_propostas.html
+++ b/propostas/templates/propostas/publicar_propostas.html
@@ -107,15 +107,7 @@
           $("#liberadas").html("Erro de Atualização");
         }
       },
-      error: function (request, status, error) {
-        {% if user.tipo_de_usuario == 4 %} 
-          alert(request.responseText);
-          jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-          console.log('error'+request.responseText);
-        {% else %}
-          jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-        {% endif %}
-      }
+      {% include "ajax_error_function.js" %}
     });
   
   });
