--- a/templates/disciplina-modal.html
+++ b/templates/disciplina-modal.html
@@ -66,15 +66,7 @@
               console.log("Erro: Valor não atualizado.");
             }
         },
-        error: function (request, status, error) {
-          {% if user.tipo_de_usuario == 4 %} 
-            alert(request.responseText);
-            jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-            console.log('error'+request.responseText);
-          {% else %}
-            jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
-          {% endif %}
-        }
+        {% include "ajax_error_function.js" %}
     });
 
   }
