--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -124,10 +124,8 @@
     var update = function() {
         $.ajax({
             type: "GET",
-            url: '{% url "encontros_marcar" %}',
-            data: {    
-                "csrfmiddlewaretoken": "{{ csrf_token }}",
-            },
+            url: "{% url 'encontros_marcar' %}",
+            data: {"csrfmiddlewaretoken": "{{ csrf_token }}",},
             success: function(response){
 
                 var value = $( "input[type=radio][name=selection]:checked" ).val();
