relatos com feedback

--- a/templates/informacoes.html
+++ b/templates/informacoes.html
@@ -55,10 +55,10 @@
   </style>
 
   <script>
-    $(document).on('click','#informacoes_tag',function(){
-      if($("#toggle").is(':visible')) $("#informacoes_gerais").css("display", "inline-block");
+    $(document).on("click","#informacoes_tag",function(){
+      if($("#toggle").is(":visible")) $("#informacoes_gerais").css("display", "inline-block");
       else $("#informacoes_gerais").css("display", "block");
-      $("#toggle").toggle( "slide" );
+      $("#toggle").toggle("slide");
     });
   </script>
  
