--- a/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
+++ b/organizacoes/templates/organizacoes/organizacoes_prospectadas.html
@@ -73,39 +73,22 @@
         var cursos_organizacoes = {};
     </script>
 
-    
     <div class="table-responsive">
       <table id="OrganizacoesTable" class="table-bordered table-sm">
         <thead class="table-info">
-        <tr>
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')">
-            Organização
-          </th>
-
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" width="48em">
-            Área
-          </th>
-
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" width="85em">
-            Interesse
-          </th>
-
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" width="97em">
-            <small class="tit_peq">Último<br>Contato</small>
-          </th>
-          
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')">
-            Anotação
-          </th>
-          
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" width="81em">
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Disponíveis</small>
-          </th>
-
-          <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" width="81em">
-            <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Enviadas</small>
-          </th>
-        </tr>
+          <tr>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')">Organização</th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" width="48em">Área</th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" width="85em">Interesse</th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" width="78em"><small class="tit_peq">Último<br>Contato</small></th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')">Anotação</th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(6)')" width="81em">
+              <a data-toggle="tooltip" data-html="true" animation="true" title="Contando somente as propostas já autorizadas e disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Disponíveis</small>
+            </th>
+            <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(7)')" width="81em">
+              <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas submetidas pela organização, mesmo aquelas que não estão disponibilizadas para os estudantes aplicarem"><small class="tit_peq">Propostas<br>Enviadas</small>
+            </th>
+          </tr>
         </thead>
 
         <tbody>
@@ -124,9 +107,9 @@
               {% elif contato.tipo_de_retorno == 4 %}
                 "background-color:yellow" {% comment %} (4, 'Confirmamos um grupo de estudantes para o projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 5 %}
-                "background-color:#e289df" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'),
+                "background-color:#e289df" {% comment %} (5, 'Notificamos que não conseguimos montar projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 6 %}
-                "background-color:green" {% comment %} (6, 'Contrato fechado para projeto'), {% endcomment %}
+                "background-color:aquamarine" {% comment %} (6, 'Contrato fechado para projeto'), {% endcomment %}
               {% elif contato.tipo_de_retorno == 7 %}
                 "background-color:lightyellow" {% comment %} (7, 'Envio de Relatório Final'), {% endcomment %}
               {% endif %}
@@ -134,14 +117,12 @@
           {% endif %}
           >
             <td>
-              <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">
-                {{organizacao.nome}}
-              </a>
+              <a class="imprimir" href="{% url 'organizacao_completo' organizacao.id %}" target="_blank">{{organizacao.nome}}</a>
             </td>
 
             <td style="text-align:center">
-              <small>{% for curso in cursos %}{% if curso.curso_do_insper %}<span class="cursor_pointer" id="{{organizacao.id}}{{curso.sigla_curta}}"
-                 onclick="areas('{{organizacao.id}}','{{curso.sigla_curta}}')" {% if not curso in organizacao.area_curso.all %}style="color:lightgray"{% endif %}>{{curso.sigla_curta}}</span>{% endif %}{% endfor %}</small>
+              <small style="white-space: nowrap;">{% for curso in cursos %}{% if curso.curso_do_insper %}<span class="cursor_pointer" id="{{organizacao.id}}{{curso.sigla_curta}}"
+                 onclick="areas('{{organizacao.id}}','{{curso.sigla_curta}}')" {% if not curso in organizacao.area_curso.all %}style="color:lightgray"{% endif %}>{{curso.sigla_curta}}&nbsp;</span>{% endif %}{% endfor %}</small>
             </td>
 
             <td style="text-align:center">
@@ -155,11 +136,11 @@
               </small>
             </td>
 
-            <td id='data{{organizacao.id}}'>
+            <td id="data{{organizacao.id}}">
               {% if not contato %}
-                ---------
+                --------
               {% else %}
-                {{contato.momento|date:"d/m/Y"}}
+                {{contato.momento|date:"d/m/y"}}
               {% endif %}
             </td>
 
@@ -225,12 +206,12 @@
             </td>
 
           </tr>
-          {% if contato != '---------' %}
-            {% if contato.momento|date:'Ymd' > meses3|date:'Ymd' %}
+          {% if contato != "---------" %}
+            {% if contato.momento|date:"Ymd" > meses3|date:"Ymd" %}
               <script>
-                tipo = "{% for curso in organizacao.area_curso.all %}{{curso.sigla_curta}}{% endfor %}";
-                if (!('{{contato.tipo_de_retorno}}' in cursos_organizacoes)) {cursos_organizacoes['{{contato.tipo_de_retorno}}'] = {};}
-                cursos_organizacoes['{{contato.tipo_de_retorno}}'][tipo] = (cursos_organizacoes['{{contato.tipo_de_retorno}}'][tipo] || 0) + 1;
+                tipo = "{% for curso in organizacao.area_curso.all %}{{curso.sigla_curta}}/{% endfor %}";
+                if (!("{{contato.tipo_de_retorno}}" in cursos_organizacoes)) {cursos_organizacoes["{{contato.tipo_de_retorno}}"] = {};}
+                cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] = (cursos_organizacoes["{{contato.tipo_de_retorno}}"][tipo] || 0) + 1;
               </script>
             {% endif %}
           {% endif %}
@@ -261,7 +242,7 @@
       &nbsp;<span data-type="3" data-color="pink" class="show-hide" style="background-color:pink">&nbsp;&nbsp;&nbsp;</span> Declinou <span id="recusados"></span><br>
 
       &nbsp;<span data-type="4" data-color="yellow" class="show-hide" style="background-color:yellow">&nbsp;&nbsp;&nbsp;</span> Notificada de Grupo Fechado <span id="notificada"></span><br>
-      &nbsp;<span data-type="6" data-color="green" class="show-hide" style="background-color:green">&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
+      &nbsp;<span data-type="6" data-color="green" class="show-hide" style="background-color:aquamarine">&nbsp;&nbsp;&nbsp;</span> Contrato Fechado para Projeto <span id="documentada"></span><br>
       &nbsp;<span data-type="5" data-color="#e289df" class="show-hide" style="background-color:#e289df">&nbsp;&nbsp;&nbsp;</span> Avisada que não fechou grupo <span id="sem_grupo"></span><br>
   
       <script>
@@ -315,13 +296,13 @@
         }
 
         function atualiza_situacoes() {
-          document.getElementById('so_contactados').innerHTML = preenche_cursos(0);
-          document.getElementById('recusados').innerHTML = preenche_cursos(3);
-          document.getElementById('interessados').innerHTML = preenche_cursos(1);
-          document.getElementById('confirmados').innerHTML = preenche_cursos(2);
-          document.getElementById('notificada').innerHTML = preenche_cursos(4);
-          document.getElementById('documentada').innerHTML = preenche_cursos(6);
-          document.getElementById('sem_grupo').innerHTML = preenche_cursos(5);
+          document.getElementById("so_contactados").innerHTML = preenche_cursos(0);
+          document.getElementById("recusados").innerHTML = preenche_cursos(3);
+          document.getElementById("interessados").innerHTML = preenche_cursos(1);
+          document.getElementById("confirmados").innerHTML = preenche_cursos(2);
+          document.getElementById("notificada").innerHTML = preenche_cursos(4);
+          document.getElementById("documentada").innerHTML = preenche_cursos(6);
+          document.getElementById("sem_grupo").innerHTML = preenche_cursos(5);
         }
 
         atualiza_situacoes();
@@ -331,15 +312,11 @@
       <p>&nbsp;</p>
       <strong>Total de Propostas Submetidas (>={{ano}}.{{semestre}}):</strong> {{ total_disponiveis }}
       <a data-toggle="tooltip" data-html="true" animation="true" title="Contando todas as propostas, incluindo as (ainda) não disponibilizadas para os estudantes.">
-          ({{ total_submetidas }})
-        </a><br>
-
-      <br>
-
+        ({{ total_submetidas }})
+      </a>
 
   </div>
 
-  <p>&nbsp;</p>
 
   {% include "annotation-modal.html" %}
 
@@ -378,13 +355,7 @@
           "estrelas": pos,
         },
         dataType: "json",
-        success: function (data) {
-          if (data.atualizado) {
-            //console.log("Valor atualizado.");
-          } else {
-            console.log("Erro: Valor não atualizado.");
-          }
-        },
+        success: function (data) {},
         {% include "ajax_error_function.js" %}
       });
     }
@@ -416,15 +387,15 @@
     }
 
     function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
-      var filterValue = $('.filter').val();
-      var row = $('.item'); 
+      var filterValue = $(".filter").val();
+      var row = $(".item"); 
       row.hide();
 
       row.each(function(i, el) {
-        if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
+        if( filterValue == "todas" || filterValue == $(el).attr("data-type") ) {
             $(el).show();
         }
-        else if( filterValue == "contactadas" && $(el).attr('data-type') > 0 ) {
+        else if( filterValue == "contactadas" && $(el).attr("data-type") > 0 ) {
             $(el).show();
         }
       });
@@ -438,9 +409,6 @@
       filtra_data();
     });
 
-  </script>
-
-  <script>
       $(".periodo").change(function(){
         
           $("#spinner").css("visibility", "visible");
