--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -32,10 +32,6 @@
   {% if professor.lattes %}
     <strong>Lattes:</strong> <a href="{{ professor.lattes }}"> {{ professor.lattes }} </a><br>
   {% endif %}
-  {% if professor.user.linkedin %}
-    <strong>LinkedIn:</strong> <a href="{{professor.user.linkedin}}" target="_blank">{{professor.user.linkedin}}</a><br>
-  {% endif %}
-  <strong>e-mail:</strong> <a href="mailto:{{professor.user.email}}"> &lt;{{professor.user.email}}&gt;</a><br>
   {% if professor.website %}
     <strong>website:</strong> <a href="{{ professor.website }}"> {{ professor.website }} </a><br>
   {% endif %}
@@ -43,12 +39,7 @@
     <strong>Áreas de Interesse:</strong> {{ professor.areas }}<br>
   {% endif %}
 
-  {% if professor.user.observacoes %}
-      <strong>Observações:</strong>
-      <div style="display: block; padding-left: 18px">
-      {{professor.user.observacoes|linebreaks}}
-      </div>
-  {% endif %}
+  {% include "dados_usuario.html" with user=professor.user %}
   
   {% if aulas %}
     <hr>
