--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -172,6 +172,15 @@ table, th, td {
   top:1px;
 }
 
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 @media only screen and (max-width: 740px) {
   table, th, td {
     font-size: 14px;
