--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -35,29 +35,7 @@
       margin-left: 10px;
     }
 
-    .unselectable {
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      -o-user-select:none;
-      user-select: none;
-    }
-
-    .selectable {
-      -webkit-touch-callout: all;
-      -webkit-user-select: all;
-      -khtml-user-select: all;
-      -moz-user-select: all;
-      -ms-user-select: all;
-      -o-user-select:all;
-      user-select: all;
-    }
-
-    ul {
-      padding-left: 1.4em;
-    }
+    ul {padding-left: 1.4em;}
 
   </style>
 
@@ -196,7 +174,6 @@
           </li>
         {% else %}
           <li>
-              {% comment %} <span class="unselectable" style="color: lightgrey;">&bull;</span> {% endcomment %}
               <a href="{% url 'parceiro_detail' conexao.parceiro.id %}" style="color: LightBlue;">
                 {{ conexao.parceiro.user.get_full_name }}
               </a>
