--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -23,7 +23,7 @@
 {% if notas %}
   Notas: 
   {% for aval, nota, peso, descr in notas %}
-    <span style="background-color:#eef; cursor:pointer;" data-toggle="tooltip" data-html="true" animation="true" 
+    <span style="background-color:#EEF; cursor:pointer;" data-toggle="tooltip" data-html="true" animation="true" 
     title="{{descr}} | peso={{peso|floatformat:3}}%">
       {{aval}}={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
     </span>
