--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -74,7 +74,7 @@
         {% for a in avisos %}
 
           {% if a.class == "Evento" %}
-            <tr style="vertical-align: middle;" class="linha" data-type="Co Ev">
+            <tr style="vertical-align: middle; {% if hoje == a.evento.get_data %}background-color: #F0FFFF;{% endif %}" class="linha" data-type="Co Ev">
               <th scope="row"></th>
               <td style="vertical-align: middle;" class="{% if a.evento.get_data < hoje %}text-success{% else %}text-info{% endif %}">
                 <span class="data_longa">{{a.evento.get_data}}</span><span class="data_curta">{{a.evento.get_data|date:"d/m/y"}}</span>
@@ -104,7 +104,8 @@
               {% if a.aviso.todos_alunos %}Es{% endif %}
               {% if a.aviso.todos_orientadores %}Or{% endif %}
               {% if a.aviso.contatos_nas_organizacoes %}Og{% endif %}
-            " >
+            " 
+            {% if a.data == hoje %}style="background-color: #F0FFFF;"{% endif %} >
 
             <th style="vertical-align: middle; text-align:center;" scope="row">
               {% if a.data %}
