--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -55,7 +55,7 @@
   
   <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
 
-  {% include "tipo_projeto.html" with com_tipo=True %}<br>
+  {% include "tipo_projeto.html" with com_tipo=True %}
 
   {% if projeto.resumo %}
     <div class="descricao" style="margin-top: 8px;">
@@ -85,13 +85,17 @@
     <img class="logotipo" src="{{ projeto.organizacao.logotipo.url }}" alt="{{ projeto.organizacao.sigla }}">
   {% endif %}
 
-  <h3>Organização:
+  <h5>Organização:
     {% if projeto.organizacao %}
-      <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
+      {% else %}
+        {{ projeto.organizacao.nome }}
+      {% endif %}
     {% else %}
       NÃO DEFINIDA
     {% endif %}
-  </h3>
+  </h5>
 
   {% for conexao in cooperacoes %}
     {% if conexao.parceiro and conexao.parceiro.organizacao %}
@@ -154,7 +158,9 @@
   
   <div class="conexoes" style="margin-top: 8px;">
     <strong>conexões:</strong>
-    <small class="esconder"><a style="vertical-align: 0px;" href="{% url 'seleciona_conexoes' %}?projeto={{projeto.id}}">&#10133;</a></small>
+    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+      <small class="esconder"><a style="vertical-align: 0px;" href="{% url 'seleciona_conexoes' %}?projeto={{projeto.id}}">&#x1F517;</a></small>
+    {% endif %}
     <br>
     {% if conexoes %}
       {% comment %} margin-left: 0.5em;  padding-left: 12px;"> {% endcomment %}
@@ -162,15 +168,17 @@
       {% for conexao in conexoes %}
         {% if conexao.parceiro.user.is_active %}
           <li>
-              <a href="{% url 'parceiro_detail' conexao.parceiro.id %}">
-                {{ conexao.parceiro.user.get_full_name }}
-              </a>
-              <a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a>
-              {% for papel in conexao.get_papeis %}
-                <span class="opt_full">[{{papel.0}}]</span>
-                <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{papel.0}}">[{{papel.1}}]</span>
-              {% endfor %}
-              {% if conexao.observacao %}&nbsp;&nbsp;obs: {{conexao.observacao}}{% endif %}
+            {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+              <a href="{% url 'parceiro_detail' conexao.parceiro.id %}">{{ conexao.parceiro.user.get_full_name }}</a>
+            {% else %}
+              {{ conexao.parceiro.user.get_full_name }}
+            {% endif %}
+            <a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a>
+            {% for papel in conexao.get_papeis %}
+              <span class="opt_full">[{{papel.0}}]</span>
+              <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{papel.0}}">[{{papel.1}}]</span>
+            {% endfor %}
+            {% if conexao.observacao %}&nbsp;&nbsp;obs: {{conexao.observacao}}{% endif %}
           </li>
         {% else %}
           <li>
@@ -198,19 +206,21 @@
   {% if projeto.orientador %}
     <hr>
     {% if projeto.proposta.intercambio %}
-      <h3>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável: </h3>
+      <h4>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável: </h4>
     {% else %}
-      <h3>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}: </h3>
+      <h4>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}: </h4>
     {% endif %}
     <div style="margin-left: 0.3em;">
       &#8614;
-      <a href="{% url 'professor_detail' projeto.orientador.id %}">
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        <a href="{% url 'professor_detail' projeto.orientador.id %}">{{projeto.orientador.user.get_full_name}}</a>
+      {% else %}
         {{projeto.orientador.user.get_full_name}}
-      </a>
+      {% endif %}
       <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
     </div>
   {% else %}
-    <h3>Orientador: Não definido</h3>
+    <h4>Orientador: Não definido</h4>
   {% endif %}
 
   {% if coorientadores %}
@@ -234,28 +244,25 @@
   {% endif %}
 
   <hr>
-  <h3>Estudante{% if alocacoes.count > 2 %}s{% endif %} Alocado{% if alocacoes.count > 2 %}s{% endif %} no Projeto:</h3>
+  <h4>Estudante{% if alocacoes.count > 2 %}s{% endif %}:</h4>
   <ul>
   {% for alocacao in alocacoes %}
     <li>
-    <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
-        {{alocacao.aluno.user.get_full_name}} 
-        <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
-        <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{ alocacao.aluno.curso2}}">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>
-        &lt;{{alocacao.aluno.user.email}}&gt; 
-        {% for opcao in alocacao.aluno.opcao_set.all %}
-          {% if opcao.projeto == projeto %}
-            (opção #{{opcao.prioridade}})
-          {% endif %}
-        {% endfor %}
-        {% if alocacao.aluno.externo %}<span style="color:red">[{{alocacao.aluno.externo}}]</span>{% endif %}
-    </a>
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        <a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}}</a>
+      {% else %}
+        {{alocacao.aluno.user.get_full_name}}
+      {% endif %}
+      <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
+      <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{ alocacao.aluno.curso2}}">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>
+      <a href="mailto:{{alocacao.aluno.user.email}}"> &lt;{{alocacao.aluno.user.email}}&gt;</a>
+      {% if alocacao.aluno.externo %}<span style="color:red">[{{alocacao.aluno.externo}}]</span>{% endif %}
     </li>
   {% endfor %}
   </ul>
 
   {% if medias_oo %}
-    <hr><h3>Médias de Grupo:</h3>
+    <hr><h4>Médias de Grupo:</h4>
 
     Médias:
     {% for key, value in medias_oo.media_grupo.items %}
@@ -316,31 +323,40 @@
 
   {% endif %}
 
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
   {% if projeto.has_relatos %}  
     <hr>
-    <h3>Relatos Quinzenais</h3>
+    <h4>Relatos Quinzenais</h4>
     {% include "relatos.html" %}
+  {% endif %}
   {% endif %}
 
   <hr>
-  <h3>Documentos
-    <small class="esconder">
-      <a class="open-documento" data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}">&#10133;</a>
-    </small>
-  </h3>
-  {% include "documentos.html" with documentos=projeto.documento_set.all %}
+  <h4>Documentos:
+    {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+      <small class="esconder">
+        <a class="open-documento" data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}">&#10133;</a>
+      </small>
+    {% endif %}
+  </h4>
+  {% include "documentos.html" %}
 
-  <hr>
-  <h3>Certificados
-    <small class="esconder">
-      <a href="{% url 'carregar_certificado' %}">&#10133;</a>
-    </small>
-  </h3>
-  {% include "certificados.html" with certificados=projeto.certificado_set.all %}
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+    <hr>
+    <h4>Certificados:
+      {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+        <small class="esconder">
+          <a href="{% url 'carregar_certificado' %}">&#10133;</a>
+        </small>
+      {% endif %}
+    </h4>
+    {% include "certificados.html" with certificados=projeto.certificado_set.all %}
+  {% endif %}
 
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
   {% if projeto.encontro_set.all %}
       <hr>
-      <h3>Mentorias Marcadas<br></h3>
+      <h4>Mentorias:<br></h4>
       <ul>
           {% for dinamica in projeto.encontro_set.all %} 
               <li>
@@ -369,58 +385,63 @@
           {% endfor %}
       </ul>
   {% endif %}
-
-  <hr>
-  <div style="max-width: 80em; text-align: center;">
-
-    <a class="myButton" style="width: 13em; padding-bottom: 3px;"
-    data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
-    href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
-
-    <a class="myButton" style="width: 13em; padding-bottom: 3px;"
-    data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
-    href="{% url 'conceitos_obtidos' projeto.id %}">Resultado Bancas</a>
-
-    <a class="myButton" style="width: 13em; padding-bottom: 3px;"
-    data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
-    href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
-
-    {% if projetos_avancados %}
-      <a class="myButton" 
-      data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
-      href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em; padding-bottom: 3px;">Avançado</a>
-    {% else %}
-    <a class="myButton" 
-      data-toggle="tooltip" data-html="true" animation="true" title="Cria uma versão avançada desse projeto"
-      onclick="cria_avancado()" style="color:white; width: 13em; padding-bottom: 3px;">Cria Avançado</a>
-    {% endif %}
-
-    <a class="myButton" style="width: 13em; padding-bottom: 3px;"
-    data-toggle="tooltip" data-html="true" animation="true" title="Permite avaliar as entregas do projeto"
-    href="{% url 'avaliar_entregas' projeto.id %}">Avaliar Entregas</a>
-
-    <a class="myButton" style="width: 13em; padding-bottom: 3px;"
-    data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
-    href="{% url 'editar_projeto' projeto.id %}">Editar</a>
-
-  </div>
-  <p>&nbsp;</p>
-
-  {% if not projetos_avancados %}
-    <script>
-      function cria_avancado() {
-        {% if user.tipo_de_usuario == 4 %} 
-          if (confirm('Não existe uma versão avançada desse projeto, deseja criar?')) {
-            window.open("{% url 'projeto_avancado' projeto.id %}");
-          }
-        {% else %}
-          alert('Você não tem permissão para criar uma versão avançada desse projeto.');
-        {% endif %}
-      }
-    </script>
   {% endif %}
 
-  {% include "documento-modal.html" %}
-  {% include "annotation-modal2.html" %}{% comment %} NÃO SEI SE AINDA EM USO {% endcomment %}
 
+  {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+
+    <hr>
+    <div style="max-width: 80em; text-align: center;">
+
+      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      data-toggle="tooltip" data-html="true" animation="true" title="Acessa a poposta do projeto"
+      href="{% url 'proposta_completa' projeto.proposta.id %}">Proposta</a>
+
+      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      data-toggle="tooltip" data-html="true" animation="true" title="Acessa as avaliações das bancas"
+      href="{% url 'conceitos_obtidos' projeto.id %}">Resultado Bancas</a>
+
+      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      data-toggle="tooltip" data-html="true" animation="true" title="Acessa os agendamentos das bancas"
+      href="{% url 'bancas_lista' projeto.id %}">Agendamentos</a>
+
+      {% if projetos_avancados %}
+        <a class="myButton" 
+        data-toggle="tooltip" data-html="true" animation="true" title="Acessa a versão avançada desse projeto"
+        href="{% url 'projeto_avancado' projeto.id %}" style="width: 13em; padding-bottom: 3px;">Avançado</a>
+      {% else %}
+      <a class="myButton" 
+        data-toggle="tooltip" data-html="true" animation="true" title="Cria uma versão avançada desse projeto"
+        onclick="cria_avancado()" style="color:white; width: 13em; padding-bottom: 3px;">Cria Avançado</a>
+      {% endif %}
+
+      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      data-toggle="tooltip" data-html="true" animation="true" title="Permite avaliar as entregas do projeto"
+      href="{% url 'avaliar_entregas' projeto.id %}">Avaliar Entregas</a>
+
+      <a class="myButton" style="width: 13em; padding-bottom: 3px;"
+      data-toggle="tooltip" data-html="true" animation="true" title="Permite editar alguns campos do projeto"
+      href="{% url 'editar_projeto' projeto.id %}">Editar</a>
+
+    </div>
+    <p>&nbsp;</p>
+
+    {% if not projetos_avancados %}
+      <script>
+        function cria_avancado() {
+          {% if user.tipo_de_usuario == 4 %} 
+            if (confirm('Não existe uma versão avançada desse projeto, deseja criar?')) {
+              window.open("{% url 'projeto_avancado' projeto.id %}");
+            }
+          {% else %}
+            alert('Você não tem permissão para criar uma versão avançada desse projeto.');
+          {% endif %}
+        }
+      </script>
+    {% endif %}
+
+    {% include "documento-modal.html" %}
+    {% include "annotation-modal2.html" %}{% comment %} NÃO SEI SE AINDA EM USO {% endcomment %}
+
+  {% endif %}
 {% endblock %}
